--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+input,
+select,
+button {
+  width: 250px;
+  margin: 10px;
+  padding: 8px 12px;
+  border: 1.5px solid #ccc;
+  border-radius: 6px;
+  font-size: 15px;
+  background-color: #f9f9f9;
+  color: #333;
+  outline: none;
+}
+button {
+  width: max-content;
+  background-color: #4f46e5;
+  color: #fff;
+}
+
+input:focus,
+select:focus {
+  border-color: #4f46e5; /* subtle focus highlight */
+  background-color: #fff;
+}
+
+input::placeholder {
+  color: #aaa;
 }
