--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
 input,
 select,
-button {
+button,
+textarea {
   width: 250px;
   margin: 10px;
   padding: 8px 12px;
@@ -31,7 +33,8 @@ button {
 }
 
 input:focus,
-select:focus {
+select:focus,
+textarea:focus {
   border-color: #4f46e5; /* subtle focus highlight */
   background-color: #fff;
 }
