--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ code {
 input,
 select,
 button,
-textarea {
+textarea,
+.btn {
   width: 250px;
   margin: 10px;
   padding: 8px 12px;
@@ -26,10 +27,11 @@ textarea {
   color: #333;
   outline: none;
 }
-button {
+button,
+.btn {
   width: max-content;
   background-color: #4f46e5;
-  color: #fff;
+  color: #fff !important;
 }
 
 input:focus,
@@ -41,4 +43,19 @@ textarea:focus {
 
 input::placeholder {
   color: #aaa;
+}
+a {
+  font-weight: bold;
+  color: blue;
+}
+.navbar a {
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #000;
+}
+
+.navbar a.active {
+  font-weight: bold;
+  color: blue;
+  border-bottom: 2px solid blue;
 }
